objects/HS_Partner_Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Event_Day__c</fullName>
        <label>Event Day</label>
        <referenceTo>HS_Event_Day__c</referenceTo>
        <relationshipLabel>HS Partner Attendances</relationshipLabel>
        <relationshipName>HS_Partner_Attendances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <formula>Event_Day__r.HS_Event__r.HS_Event_Type__r.Name</formula>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invited_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invited Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HS Partner Attendances</relationshipLabel>
        <relationshipName>HS_Partner_Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_People_attending__c</fullName>
        <inlineHelpText>How many people attending from the organisation?</inlineHelpText>
        <label>Number of People attending</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_vacancies_available__c</fullName>
        <inlineHelpText>Unconfirmed Value</inlineHelpText>
        <label>Number of vacancies available</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Attending__c</fullName>
        <label>Partner Attending?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Response</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Contact_Email__c</fullName>
        <label>Partner Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Engagement__c</fullName>
        <label>Partner Engagement</label>
        <referenceTo>HS_Partner_Engagement__c</referenceTo>
        <relationshipLabel>HS Partner Attendances</relationshipLabel>
        <relationshipName>HS_Partner_Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Send_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Ticked - invite sent
If Unticked - invite hasn&apos;t been sent</inlineHelpText>
        <label>Send Invite</label>
        <type>Checkbox</type>
    </fields>
    <label>HS Partner Attendance</label>
    <nameField>
        <displayFormat>HSPA-{000000}</displayFormat>
        <label>HS Partner Attendance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HS Partner Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>